[update] scan wifi disable camera, go home at camera timeline

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DevicePolicies</string>
+    <string name="app_name">HiwinCameraController</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Uninstall</string>
